--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,166 @@
-pytelegrambotapi
-sqlalchemy
-alembic
-urllib3
-requests
+aeidon==1.9
+aiofiles==23.1.0
+aiohttp==3.8.4
+aiosignal==1.3.1
+altair==5.0.1
+annotated-types==0.5.0
+anyio==3.7.1
+app-version==1.0.1
+appdirs==1.4.4
+async-timeout==4.0.2
+attrs==23.1.0
+audioplayer==0.6
+Babel==2.9.1
+beautifulsoup4==4.9.3
+Brotli==1.0.9
+CDApplet==1.0
+CDBashApplet==1.0
+certifi==2022.5.18.1
+cffi==1.14.6
+chardet==4.0.0
+charset-normalizer==2.0.12
+click==8.1.4
+coloredlogs==15.0.1
+cryptography==3.4.8
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.2.16
+decorator==5.0.9
+distro==1.7.0
+dnspython==2.1.0
+EasyProcess==1.1
+entrypoint2==1.1
+exceptiongroup==1.1.2
+fastapi==0.100.0
+ffmpy==0.3.0
+filelock==3.12.2
+flatbuffers==23.5.26
+frozenlist==1.3.3
+fsspec==2023.1.0
+git-cola==3.11.0
+gpg===1.16.0-unknown
+gradio==3.28.3
+gradio_client==0.2.9
+greenlet==1.1.1
+guake==3.9.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+huggingface-hub==0.16.4
+humanfriendly==10.0
+idna==3.3
+importlib-resources==6.0.0
+iniparse==0.5
+iotop==0.6
+isc==2.0
+jeepney==0.8.0
+Jinja2==3.1.2
+jsonschema==4.18.2
+jsonschema-specifications==2023.6.1
+kiwisolver==1.4.4
+Levenshtein==0.18.1
+libcomps==0.1.18
+linkify-it-py==2.0.2
+lxml==4.8.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+matplotlib==3.3.4
+mdit-py-plugins==0.3.3
+mdurl==0.1.2
+MouseInfo==0.1.3
+mpmath==1.3.0
+mss==9.0.1
+multidict==6.0.4
+mutagen==1.45.1
+net_monitor==0.30
+nftables==0.1
+notify==0.3.1
+numpy==1.24.4
+onnxruntime==1.15.1
+orjson==3.9.2
+packaging==21.3
+pandas==1.0.5
+pbr==5.6.0
+pexpect==4.8.0
+Pillow==9.2.0
+pkgutil_resolve_name==1.3.10
+ply==3.11
+protobuf==4.23.4
+psutil==5.9.1
+ptyprocess==0.7.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycairo==1.20.1
+pycparser==2.21
+pycryptodomex==3.15.0
+pycups==1.9.74
+pycurl==7.43.0.2
+pydantic==2.0.2
+pydantic_core==2.1.2
+pydub==0.25.1
+pyenchant==3.0.1
+PyGetWindow==0.0.9
+Pygments==2.15.1
+PyGObject==3.42.2
+pyinotify==0.9.6
+PyMsgBox==1.0.9
+PyOpenGL==3.1.5
+PyOpenGL-accelerate==3.1.5
+pyOpenSSL==20.0.1
+pyparsing==3.0.9
+pyperclip==1.8.2
+PyQt5==5.15.7
+PyQt5-sip==12.11.0
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+pysmbc==1.0.25.1
+pyTelegramBotAPI==4.12.0
+python-dateutil==2.6.1
+python-dbusmock==0.27.5
+python-ldap==3.4.3
+python-manatools==0.0.4
+python-multipart==0.0.6
+python3-xlib==0.15
+pytweening==1.0.7
+pytz==2022.4
+pyxdg==0.27
+PyYAML==5.4.1
+referencing==0.29.1
+reportlab==3.5.68
+rpds-py==0.8.10
+rpm==4.17.0
+scipy==1.6.3
+semantic-version==2.10.0
+Send2Trash==1.8.0
+simplejson==3.17.2
+sip==6.6.2
+six==1.16.0
+slip==0.6.5
+slip.dbus==0.6.5
+sniffio==1.3.0
+soupsieve==2.2.1
+SQLAlchemy==1.4.23
+sqlalchemy-migrate==0.13.0
+sqlparse==0.4.3
+srt==3.5.3
+starlette==0.27.0
+sympy==1.12
+Tempita==0.5.3.dev0
+tk==0.1.0
+toml==0.10.2
+toolz==0.12.0
+tqdm==4.65.0
+translate-toolkit==3.4.0
+typing_extensions==4.7.1
+uc-micro-py==1.0.2
+ufw==0.36
+urllib3==1.26.12
+uvicorn==0.22.0
+validate-email==1.3
+vobject==0.9.6.1
+websockets==10.3
+yarl==1.9.2
+yt-dlp==2023.7.6
+zipp==3.16.0
+zope.interface==5.4.0
