что-то менял на вдс

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,21 @@ alembic/__pycache__/*
 alembic/versions/__pycache__/*
 GPL-3
 trash/*
-config.json
+config.json*
 config.main.json
 *.7z
 running.flg
 flags/*
 test.flg
+.Xauthority
+.bash*
+.cache/*
+.config/*
+.gitconfig
+.lesshst
+.local/*
+.profile
+.selected_editor
+.ssh/*
+env/*
+old_data/*
