--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
 *.cmd
 *.kdev4
 *.log
+*.7z
+
+data/*
+flags/*
 logs/*
-data/
-.idea/*
 __pycache__/*
-alembic/__pycache__/*
-alembic/versions/__pycache__/*
-GPL-3
 trash/*
-config.json*
+.idea/*
+config.json
 config.main.json
 unittest_config.json
-*.7z
-running.flg
-flags/*
-test.flg
+try_config.json
+GPL-3
 .Xauthority
 .bash*
 .cache/*
@@ -27,5 +25,3 @@ test.flg
 .selected_editor
 .ssh/*
 env/*
-old_data/*
-lastwork/*
