Начал тестировать сигнальщика

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ __pycache__/*
 trash/*
 .idea/*
 tests/__pycache__/*
+alembic/__pycache__/*
+alembic/versions/__pycache__/*
 config.json
 config.json.*
 config.main.json
